<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:gravity="center"
    >

    <TextView
        style="@style/botones"
        android:text="@string/Bienvenidos"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:id="@+id/t1"
        android:layout_weight="4"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3.5">
    <Button
        style="@style/botones"
        android:text="@string/selecccionar"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:onClick="mostrarPopup"
        android:layout_gravity="center"
        android:background="@color/gray"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:textColor="@color/white"
        android:background="@color/gray"
        android:layout_gravity="center"
        android:onClick="iniciar"
        android:id="@+id/boton1"
        android:layout_marginBottom="5dp"
        />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:textColor="@color/white"
            android:background="@color/gray"
            android:layout_gravity="center"
            android:onClick="salir"
            android:id="@+id/btnSalir"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:textColor="@color/white"
            android:background="@color/gray"
            android:layout_gravity="center"
            android:onClick="ranking"
            android:id="@+id/rank"
            />

    </LinearLayout>
    <TextView
        style="@style/botones"
        android:text="@string/comentario"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:layout_weight="2"
        />
</LinearLayout>